force-app/main/default/objects/Asset_Debt__c/Asset_Debt__c.object-meta.xml
<CustomObject>
    <label>Asset/Debt</label>
    <nameField>
        <label>Asset or Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets/Debts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>