force-app/main/default/objects/Asset_Debt__c/fields/Asset_Debt_Belongs_to_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Debt_Belongs_to_Contact_Owner__c</fullName>
    <formula>Contact__r.Contact_owner_ID__c = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset/Debt Belongs to Contact Owner</label>
    <type>Checkbox</type>
</CustomField>