force-app/main/default/objects/Asset_Debt__c/fields/Asset_Debt_Goal_Count__c.field-meta.xml
<CustomField>
    <fullName>Asset_Debt_Goal_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset/Debt Goal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>