force-app/main/default/objects/Asset_Debt__c/fields/Asset_Debt_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Debt_Ownership_Status__c</fullName>
    <formula>IF( 
  Asset_Debt_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset/Debt Ownership Status</label>
    <type>Text</type>
</CustomField>