force-app/main/default/objects/Asset_Debt__c/fields/Asset_or_Debt_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_or_Debt_Type__c</fullName>
    <label>Asset or Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_or_Debt</valueSetName>
    </valueSet>
</CustomField>