force-app/main/default/objects/Asset_Debt__c/fields/Housing_Member__c.field-meta.xml
<CustomField>
    <fullName>Housing_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If associated with client, please leave blank</inlineHelpText>
    <label>Housing Member</label>
    <referenceTo>Housing_Member__c</referenceTo>
    <relationshipLabel>Assets/Debts</relationshipLabel>
    <relationshipName>Assets_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>