force-app/main/default/objects/Asset_Debt__c/recordTypes/Asset.recordType-meta.xml
<RecordType>
    <fullName>Asset</fullName>
    <active>true</active>
    <label>Asset</label>
</RecordType>