force-app/main/default/objects/Asset_Debt__c/recordTypes/Debt.recordType-meta.xml
<RecordType>
    <fullName>Debt</fullName>
    <active>true</active>
    <label>Debt</label>
</RecordType>