force-app/main/default/objects/Asset_Debt__c/validationRules/Amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Enter the total amount as a positive number (i.e. credit card debt of 4,000 would be entered as 4,000... not -4,000)</errorMessage>
</ValidationRule>